--- a/EmployeeControlWinForms/EmployeeControlWinForms.csproj
+++ b/EmployeeControlWinForms/EmployeeControlWinForms.csproj
@@ -155,7 +155,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="DB\Database2_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>Database2.mdf</DependentUpon>
     </Content>
   </ItemGroup>
