--- a/EmployeeControlWinForms/EmployeeControlWinForms.csproj
+++ b/EmployeeControlWinForms/EmployeeControlWinForms.csproj
@@ -48,8 +48,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus, Version=4.5.3.3, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.4.5.3.3\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,6 +65,12 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Xceed.Document.NET, Version=3.0.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocX.3.0.1\lib\net40\Xceed.Document.NET.dll</HintPath>
+    </Reference>
+    <Reference Include="Xceed.Words.NET, Version=3.0.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocX.3.0.1\lib\net40\Xceed.Words.NET.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddForms\AddCityForm.cs">
@@ -97,6 +109,10 @@
     <Compile Include="AddForms\AddStreetForm.Designer.cs">
       <DependentUpon>AddStreetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Filter\FilterClass.cs" />
+    <Compile Include="WordDocX\WordT2Export.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="CorrectionCheck\CityCorrectionCheckForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +137,7 @@
     <Compile Include="CorrectionCheck\StreetCorrectionCheckFormForm.Designer.cs">
       <DependentUpon>StreetCorrectionCheckFormForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EPPlus\ExcelExport.cs" />
     <Compile Include="SimpleAddForms\SimpleAddAreaForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -209,6 +226,10 @@
     <EmbeddedResource Include="SimpleAddForms\SimpleAddStreetForm.resx">
       <DependentUpon>SimpleAddStreetForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="WordDocX\T2.doc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -218,6 +239,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="WordDocX\T2.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
